--- a/index.html
+++ b/index.html
@@ -1,93 +1,260 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<title>
-		one - Menu</title>
-	<link rel="stylesheet" type="text/css" href="style/style.css">
-	<style type="text/css">
-		@font-face{
-		font-family: "abel";
-		src: url("font/abel.ttf");
-		}
-	
-		*{
-			font-family: "abel";
-		}
-	</style>
-	<script type="text/javascript" src="script/script.js">
-	</script>
-	<link rel="shortcut icon" href="img/logotitle.png">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<style>
+* {
+  margin:0;
+  box-sizing: border-box;
+  color: white;
+}
+body{
+  background-color: #050504;
+}
+header{
+  background-color:rgba(247, 247, 247, 0.5);
+  padding:0px;
+  position: fixed;
+  width: 100%;
+  overflow: hidden;
+  text-align: left;
+  box-shadow: 0px 0px 10px gray;
+}
+header a{
+  margin-top: 10px;
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+}
+.menu {
+  float:left;
+  width:20%;
+  text-align:center;
+}
+.menu a {
+  background-color:rgba(255, 255, 43,0.6);
+  padding:8px;
+  margin-top:7px;
+  display:block;
+  width:100%;
+  color:black;
+  border-radius: 15px;
+}
+article {
+  font-family: fantasy;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 10px 0px 0px 0px;
+  font-weight: normal;
+  text-align: justify;
+  color: black;
+}
+article p {
+  font-size: 17px;
+  margin-left: 10px;
+}
+article h1 {
+  color: black;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: rgb(255, 255, 43);
+  border-radius: 15px;
+}
+article li {
+  list-style: symbol;
+  font-size: 18px;
+  margin-left: 15px;
+  margin-bottom: 10px;
+}
+article h2 {
+  font-size: 18px;
+}
+code {
+  background-color: #bbb;
+  background-color: rgba(220, 220, 220, .5);
+  border-radius: 2px;
+  box-decoration-break: clone;
+  font-family: consolas, "Liberation Mono", courier, monospace;
+  padding: 0 2px;
+  word-wrap: break-word;
+}
+main {
+  float:left;
+  width:60%;
+  padding:0 20px;
+  display: flex;
+  flex-direction:column;
+}
+aside {
+  background-color:rgb(255, 255, 43);
+  float:left;
+  width:20%;
+  padding:15px;
+  margin-top:7px;
+  text-align:center;
+  display: block;
+  border-radius: 10px;
+}
+
+aside p{
+  color: black;
+  font-family: all;
+  margin-top: 4px;
+}
+@media only screen and (max-width:620px) {
+  /* For mobile phones: */
+  .menu, main, aside{
+    width:100%;
+    display: block;
+  }
+  header{
+    text-align: center;
+  }
+}
+</style>
 </head>
+<body style="font-family:Verdana;color:#aaaaaa;">
 
-<body><span id="home">
-<main>
-	<div id="header" style="box-shadow: 0px 1px 20px black;">
-		<div class="logo">
-			<img src="img/logoheader.png" width="110"/>
-		</div>
-	</div>
-	<marquee class="marquee">
-	<script type="text/javascript">document.write("Hay "+nama+" Selamat Datang di Cone.com. Semoga "+ nama +" ilmunya bisa berguna untuk masa depan. SEMANGAT!!")</script>
-	</marquee>
-	<div class="flex-container" style="	box-shadow: 0px 1px 20px black;">
-	<div class="materi" style="	box-shadow: -7px 1px 18px black;
-">
-		<ul>
-			<img src="img/logoheader.png" width="110"/>
-			<li><a href="#pemrograman">Pemrograman</a></li>
-			<li><a href="#algoritma">Algoritma</a></li>
-			<li><a href="bahasac.html">Belajar C</a></li>
-		</ul>
-	</div>
-	<div class="content">
-<article><span id='pemrograman'>
-<h1> Pengertian Pemrograman </h1>
-<p>Pemrograman adalah proses menulis, menguji dan memperbaiki (debug), dan memelihara kode yang membangun suatu program komputer.[1] Kode ini ditulis dalam berbagai bahasa pemrograman. Tujuan dari pemrograman adalah untuk memuat suatu program yang dapat melakukan suatu perhitungan atau 'pekerjaan' sesuai dengan keinginan si pemrogram. Untuk melakukan pemrograman, diperlukan keterampilan dalam algoritme, logika, bahasa pemrograman, dan pada banyak kasus, pengetahuan-pengetahuan lain seperti matematika.
+<header>
+  <center>
+  <img src="img/crown.png" value="logo" style="max-width: 100%; height: 50px;">
+  </center>
+  <div>
+  <a style="margin-left: 10px;">Menu</a>
+  <a style="margin-left: 10px;">Galery</a>
+  <a style="margin-left: 10px;">Student</a>
+  <a style="margin-left: 10px;">Biodata</a>
+  <a style="margin-left: 10px;">Prograss</a>
+  </div>
+</header>
+<br>
+<br>
+<br>
+<div style="overflow:auto;">
+  <div class="menu">
+    <audio loop controls style="margin-top: 7px; max-width: 100%; width: 100%;">
+    <source src="music/Surfaces - Sunday Best (Official Music Video).mp3" type="audio/mp3"></audio>
+    <a href="#">PENGENALAN BAHASA C</a>
+    <a href="#">PEMILIHAN KONDISI</a>
+    <a href="#">PENGULANGAN (LOOPING)</a>
+    <a href="#">PROSEDUR DAN FUNGSI</a>
+    <a href="#">LARIK (ARRAY)</a>
+    <a href="#">PENGURUTAN (SORTING)</a>
+  </div>
 
-Pemrograman adalah suatu seni dalam menggunakan satu atau lebih algoritme yang saling berhubungan dengan menggunakan suatu bahasa pemrograman tertentu sehingga menjadi suatu program komputer. Bahasa pemrograman yang berbeda mendukung gaya pemrograman yang berbeda pula. Gaya pemrograman ini biasa disebut paradigma pemrograman.
+ <main>
+        <article id="pengenalan">
+        <h1>PENGENALAN BAHASA C</h1>
+        <ul>
+          <li>
+            <h2>Baris Komentar</h2>
+            <p>Baris komentar adalah baris-baris yang menjelaskan maksud dari perubah yang digunakan atau maksud dari program itu sendiri. Hal ini dimaksudkan untuk memudahkan pelacakan atas perubah yang digunakan apabila program yang digunakan cukup besar atau memudahkan orang lain memahami program yang kita buat. Dalam program, baris komentar diletakkan diantara tanda /* dan */ dan baris ini tidak dikerjakan oleh komputer, hanya dianggap sebagai baris kosong.</p>
+          </li>
+          <li>
+            <h2>Struktur Bahasa C</h2>
+            Bentuk program C mirip dengan kebanyakan program bahasa tingkat tinggi lainnya. Bentuk programnya adalah :
+            <ul>
+              <li style="list-style: inside;">Judul Program</li>
+              <li style="list-style: inside;">Daftar Header File</li>
+              <li style="list-style: inside;">Deklarasi</li>
+              <li style="list-style: inside;">Deskripsi</li>
+              <ul style="margin-left: 40px;">
+                <li>
+                  <h2>Judul Program</h2>
+                  Judul program sifatnya sebagai dokumentasi saja, tidak signifikan terhadap proses program. Ditulis dalam bentuk baris komentar. Contoh :  <code>/* Program Menghitung Rata-Rata */</code>
+                </li>
+                <li>
+                  <h2>Daftar Header File</h2>
+                  C menyediakan sejumlah file judul (header file) yaitu file yang umumnya berisi prototipe fungsi, definisi makro, variabel dan definisi tipe. File ini mempunyai ciri yaitu namanya diakhiri dengan extension .h. Contoh :
+                  <br/> <code>
+                    #include &lt;stdio.h&gt;
+                  </code>
+                </li>
+                <li>
+                  <h2>Deklarasi</h2>
+                  Deklarasi adalah bagian untuk mendefinisikan semua nama yang dipakai dalam program. Nama tersebut dapat berupa nama tetapan (konstanta), nama variabel, nama tipe, nama prosedur, nama fungsi.</li>
+                <li>
+                  <h2>Deskripsi</h2>
+                  Bagian inti dari suatu program yang berisi uraian langkah-langkah penyelesaian masalah. Program C pada hakekatnya tersusun atas sejumlah blok fungsi. Sebuah program minimal mengandung sebuah fungsi. Setiap fungsi terdiri dari satu atau beberapa pernyataan, yang secara keseluruhan dimaksudkan untuk melaksanakan tugas khusus. Bagian pernyataan fungsi (disebut tubuh fungsi) diawali dengan tanda { dan diakhiri dengan tanda }</li>
+              </ul>
+            </ul>
+          </li>
+            <li>
+              <h2>Variabel</h2>
+              <p>Variabel dalam program digunakan untuk menyimpan suatu nilai tertentu dimana nilai tersebut dapat berubah-ubah. Setiap variabel mempunyai tipe dan hanya data yang bertipe sama dengan tipe variabel yang dapat disimpan di dalam variabel tersebut. Setiap variabel mempunyai nama. Pemisahan antar variabel dilakukan dengan memberikan tanda koma. Contoh :
+                <br/><code>int jumlah;<br/>float harga_per_unit, total_biaya;<br/>
+                  </code>
+                Dari contoh diatas,variabel jumlah hanya boleh menerima data yang bertipe integer (bulat), tidak boleh menerima data bertipe lainnya. Variabel harga_per_unit dan total_biaya hanya bisa diisi dengan bilangan float (pecahan).</p>
+            </li>
+            <li>
+              <h2>Konstanta</h2>
+              <p>Berbeda dengan variabel yang isinya bisa berubah selama eksekusi program berlangsung, nilai suatu konstanta tidak bisa berubah.
+                <br/> <code>const int m = 8;<br/>#define pajak 0.05</code>
+              </p>
+            </li>
+            <li>
+              <h2>Fungsi main()</h2>
+              <p>Fungsi main() harus ada pada program, karena fungsi inilah yang menjadi titik awal dan titik akhir eksekusi program. Tanda { di awal fungsi menyatakan awal tubuh fungsi sekaligus awal eksekusi program, sedangkan tanda } di akhir fungsi merupakan akhir tubuh fungsi dan sekaligus akhir eksekusi program</p>
+            </li>
+            <li>
+              <h2>Fungsi printf()</h2>
+              <p>Merupakan fungsi yang digunakan untuk menampilkan data ke layar. Dengan menggunakan fungsi ini, tampilan dapat diatur (diformat) dengan mudah. Bentuk umum dari fungsi ini : printf(”string kontrol”, argumen1, argumen2, ....); String kontrol dapat berupa keterangan beserta penentu format (seperti %d, %f). Argumen adalah data yang akan ditampilkan, dapat berupa variabel, konstanta, maupun ungkapan. Contoh :
+                <br/>
+<code>/* Program Satu */<br/>
+#include &lt;stdio.h&gt;<br/>
+main()<br/>
+{<br/>
+Printf(”Belajar Pemrograman Komputer”);<br/>
+}</code>
+              </p>
+            </li>
+            <li>
+              <h2>Fungsi scanf()</h2>
+              <p>Merupakan fungsi yang digunakan untuk menampilkan data yang dimasukkan dari keyboard.</p>
+            </li>
+            <li style="list-style: none;">
+              <h2>Contoh</h2>
+              <p>Menghitung luas dan keliling lingkaran dengan besar jari-jari lingkaran dimasukkan melalui keyboard.</p>
+              <br/>
+<code>/* Menghitung Luas dan Keliling Lingkaran */<br/>
+#include&lt;stdio.h&gt;<br/>
+#define phi 3.14<br/>
+main()<br/>
+{<br/>
+float jari,luas,keliling;<br/>
+printf(”Masukan jari-jari lingkaran = ”);<br/>
+scanf(”%f”, &jari);<br/>
+luas=phi*jari*jari;<br/>
+keliling=2*phi*jari;<br/>
+printf(”Luas lingkaran = %f \n”,luas);<br/>
+printf(”Keliling lingkaran = %f \n”,keliling);<br/>
+}<br/></code>
+            </li>
+        </ul>
+      </article>
+  </main>
 
-Apakah memprogram perangkat lunak lebih merupakan seni, ilmu, atau teknik telah lama diperdebatkan. Pemrogram yang baik biasanya mengkombinasikan ketiga hal tersebut, agar dapat menciptakan program yang efisien, baik dari sisi saat dijalankan (run time) atau memori yang digunakan.
-</p>
-</span>
-	</article>
-	<article><span id='algoritma'>
-<h1> Pengertian Algoritma </h1>
-<p>Apa yang dimaksud dengan algoritma, algoritma berarti solusi. Ketika orang berbicara mengenai algoritma di bidang pemograman. maka yang dimaksud adalah solusi dari suatu masalah yang harus dipecahkan dengan menggunakan komputer. Algoritma harus dibuat secara runut agar komputer mengerti dan mampu mengeksekusinya.
-</p>
-</span>
-	</article>
-	</div>
-	<div class="down">
-		<aside>
-			<center>
-				<img src="img/logo.png" / width="150px">
-			</center>
-			<p>
-				<center>BIODATA</center>
-			</p>
-			<p>Nama Pembuat : Dikdik Darmawan</p>
-			<p>Umur : 19 tahun</p>
-			<p>Pendidikan akhir : SMK</p>
-			<p>Pekerjaan : Tidak ada</p>
-			<p>Sedang melaksanakan jenjang pendidikan di Universitas Pendidikan Indonesia jurusan Ilmu Komputer</p>
-			<div class="contact">CONTACT ME
-			</div>
-		</aside>
-		<div class="vote">
-			<center><q id="like">Like</q> and <q id="dislike">Dislike</q> for Website Cone.com</center>
-			<p/>
-			<a href="#votelike">
-				<img src="img/like.png" width="85px" id="votelike" onclick="votelike()" />
-			</a>
-			<a href="#votedislike">
-				<img src="img/dislike.png" width="85px" id="votedislike" onclick="votedislike()" />
-			</a>
-		</div>
-	</div>
-	</div>
-	<div class="footer" style="box-shadow: 0px 1px 20px black;">Copyright : 2020</div>
-	</main>
+    <aside>
+      <center>
+        <img src="img/logo.png" / width="150px">
+      </center>
+      <p>
+        <center>BIODATA</center>
+      </p>
+      <p>Nama Pembuat : Dikdik Darmawan</p>
+      <p>Umur : 19 tahun</p>
+      <p>Pendidikan akhir : SMK</p>
+      <p>Pekerjaan : Tidak ada</p>
+      <p>Sedang melaksanakan jenjang pendidikan di Universitas Pendidikan Indonesia jurusan Ilmu Komputer</p>
+      <div class="contact">CONTACT ME
+      </div>
+    </aside>
+
+</div>
+
+<div style="background-color:#e5e5e5;text-align:center;padding:10px;margin-top:7px;">Š copyright w3schools.com</div>
+
 </body>
-
 </html>
