--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ printf(”Keliling lingkaran = %f \n”,keliling);<br/>
 
     <aside>
       <center>
-        <img src="img/logo.png" / width="150px">
+        <img src="img/logo.png" style="width: 100%; border-radius: 10px;">
       </center>
       <p>
         <center>BIODATA</center>
